k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: jordannedyck-ai
spec:
  selector:
    app: jordannedyck-ai
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
